remove bad file

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <div class="row ml-3" id="selector"></div>
     
-      <script type="text/javascript" src="index.js"></script>
+      <script type="text/javascript" src="script.js"></script>
     
     </body>
 </html>
